--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@
 
 そのため、正しくライセンスを扱うことが出来なかったり、個人情報保護の観点から GitHub にアップロードすることが難しいものがあります。
 
-各種資料については、関連情報に列挙しておきました。
+そのため、本来はこのドキュメントにLICENCEやREADMEを追加するべきなのですが、関連情報にリンクを列挙する方法をとっています。
 
 
 === 対応している画像形式
